# user_management

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  hello.yml
app/: api.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/routes/: __init__.py  books.py  health.py  hello.py
app/core/: __init__.py  api_router.py  config.py
app/db/: __init__.py  session.py
app/models/: book.py
app/repositories/: book_repo.py
app/routers/: health.py  hello.py
app/schemas/: __init__.py  book.py
app/services/: book_service.py
migrations/: env.py
migrations/versions/: 50bf0fb3065e_initial_create_books_table.py
tests/: conftest.py  conftest_init.py
tests/unit/: test_hello.py
